[gd_scene load_steps=9 format=2]

[ext_resource path="res://res/Resources/Tilemap/world1.tres" type="TileSet" id=1]
[ext_resource path="res://src/Screens/GameOverScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Actors/Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Objects/Flagpole/Flagpole.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Levels/Scripts/LevelBase.gd" type="Script" id=5]
[ext_resource path="res://src/Objects/LevelTimer/LevelTimer.gd" type="Script" id=6]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Fade/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Fade/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Fade/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Fade/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1.93187 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="LevelBase" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="ParallaxBackground" parent="."]

[node name="Sky" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2( 0.8, 0.8 )

[node name="SkyTiles" type="TileMap" parent="Background/Sky"]
modulate = Color( 0.843137, 0.913725, 0.909804, 1 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 80, 80 )
collision_layer = 8
collision_mask = 0
format = 1

[node name="Clouds" type="ParallaxLayer" parent="Background"]
z_index = 10
motion_scale = Vector2( 0.8, 0.8 )

[node name="CloudTiles" type="TileMap" parent="Background/Clouds"]
modulate = Color( 100, 100, 100, 1 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 80, 80 )
collision_layer = 8
collision_mask = 0
format = 1

[node name="BackgroundTiles" type="TileMap" parent="."]
modulate = Color( 0.435294, 0.439216, 0.462745, 1 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 80, 80 )
collision_layer = 0
collision_mask = 0
format = 1

[node name="GroundTiles" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 80, 80 )
collision_layer = 8
collision_mask = 0
format = 1

[node name="Flagpole" parent="." instance=ExtResource( 4 )]
position = Vector2( 752, 360 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 64 )

[node name="Enemies" type="Node2D" parent="."]

[node name="Fade" type="CanvasLayer" parent="."]
layer = 105

[node name="ColorRect" type="ColorRect" parent="Fade"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="CanvasLayer" parent="."]
layer = 100

[node name="GameOverScreen" parent="GameOver" instance=ExtResource( 2 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
anims/RESET = SubResource( 2 )
anims/fade_in = SubResource( 1 )

[node name="LevelTimer" type="Node" parent="."]
script = ExtResource( 6 )

[connection signal="player_reached_end" from="Flagpole" to="." method="_on_Flagpole_player_reached_end"]
[connection signal="player_died" from="Player" to="." method="_on_Player_player_died"]
